--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ Intstances/VRP Instances
 Intstances/Instances IRPCS
 Intstances/DATFiles
 __pycache__
+100nodes.txt
+60nodes.txt
+Inst1.txt
+Inst2.txt
+Inst3.txt
+Inst4.txt
+Inst5.txt
