minimum bc time

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@ Intstances/DATFiles
 __pycache__
 100nodes.txt
 60nodes.txt
-Intstances/Instances\ IRPCS/Inst1.txt
+Instances/Instances\ IRPCS/Inst1.txt
 Inst2.txt
 Inst3.txt
 Inst4.txt
 Inst5.txt
+Instances/Instances\MVRPD/
