All examples of instances uploaded

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ Intstances/VRP\ Instances
 Intstances/Instances\ IRPCS
 Intstances/__pycache__
 !binkar10_1.mps
+!Instances/IRPCSInstances/Inst1.txt
+!Instances/IRPInstances/abs1n25_2.dat
+!Instances/MVRPDInstances/ajs1n25_l_6.dat
+!Instances/OISRCInstances/Instance_4_2_100_1.oisrc
+!Instances/VRPInstances/A-n34-k5.vrp
+!Instances/CFLInstances/p800-4400-61.plc
