file results and experiments

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Intstances/__pycache__
 !Instances/OISRCInstances/Instance_4_2_100_1.oisrc
 !Instances/VRPInstances/A-n34-k5.vrp
 !Instances/CFLInstances/p800-4400-61.plc
+!Results/results.txt
