--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,34 @@ gurobi.log
 Intstances/VRP\ Instances
 Intstances/Instances\ IRPCS
 Intstances/__pycache__
-!binkar10_1.mps
-!Instances/IRPCSInstances/Inst1.txt
-!Instances/IRPInstances/abs1n25_2.dat
-!Instances/MVRPDInstances/ajs1n25_l_6.dat
-!Instances/OISRCInstances/Instance_4_2_100_1.oisrc
-!Instances/VRPInstances/A-n34-k5.vrp
-!Instances/CFLInstances/p800-4400-61.plc
+
+# Results
 !Results/results.txt
+
+# MIPLIB Instances
+!binkar10_1.mps
+
+# IRP Instances
+!Instances/IRPInstances/abs1n25_2.dat
+!Instances/IRPInstances/abs3n50_1.dat
+!Instances/IRPInstances/abs2n50_3.dat
+!Instances/IRPInstances/abs3n100_2.dat
+
+# IRPCS Instances
+!Instances/IRPCSInstances/Inst1.txt
+!Instances/IRPCSInstances/Inst2.txt
+!Instances/IRPCSInstances/Inst3.txt
+
+# MVRPD Instances
+!Instances/MVRPDInstances/ajs1n25_l_6.dat
+!Instances/MVRPDInstances/ajs4n75_h_6.dat
+!Instances/MVRPDInstances/ajs4n100_l_6.dat
+!Instances/MVRPDInstances/ajs3n75_h_6.dat
+
+# OISRC Instances
+!Instances/OISRCInstances/instance_4_2_100_1.oisrc
+!Instances/OISRCInstances/instance_20_4_200_1.oisrc
+!Instances/OISRCInstances/instance_20_4_190_1.oisrc
+
+# VRP Instances
+!Instances/VRPInstances/A-n34-k5.vrp
