New OISRC Experiment

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ Intstances/__pycache__
 !Instances/OISRCInstances/instance_20_4_200_1.oisrc
 !Instances/OISRCInstances/instance_20_4_190_1.oisrc
 !Instances/OISRCInstances/instance_15_2_170_1.oisrc
+!Instances/OISRCInstances/instance_20_2_190_1.oisrc
+!Instances/OISRCInstances/instance_20_2_200_1.oisrc
 
 # VRP Instances
 !Instances/VRPInstances/A-n34-k5.vrp
