testlog and gap plots commands

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,8 @@ Intstances/__pycache__
 
 # Testlog Files
 !testfile.testlog
+!ajs1n25_h_3.testlog
+!A-n32-k5.testlog
+!bs1n10_4.testlog
+!IRPCS_20_3_3.testlog
+!randomTSP80node.testlog
