New OISRc Files

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,8 @@ Intstances/__pycache__
 !Instances/OISRCInstances/instance_15_2_170_1.oisrc
 !Instances/OISRCInstances/instance_20_2_190_1.oisrc
 !Instances/OISRCInstances/instance_20_2_200_1.oisrc
+!Instances/OISRCInstances/instance_45_6_600_3.oisrc
+!Instances/OISRCInstances/instance_45_6_400_3.oisrc
 
 # VRP Instances
 !Instances/VRPInstances/A-n34-k5.vrp
